@@ -63,7 +63,7 @@ public class SystemDocumentManagementUploader {
                 uploadResponse
                     .getEmbedded()
                     .getDocuments()
-                    .get(0);
+                    .getFirst();
 
             return new Document(
                 uploadedDocument
